library/tests/fy_py_files/test_fy_py_files/invalid_fy_code_raises_correct_error/property_invalid_mixin_keyword/property_invalid_keyword_fy.py
"""fy
property greeting: str using french_greeting:
    prop erty french_greeting
"""
